cars list page and car create page integrated with NGRX; user create page added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <div class="navbar mb-10 bg-base-100">
     <a routerLink="/cars" class="btn btn-ghost normal-case text-xl">Cars</a>
     <a routerLink="/car/create" class="btn btn-ghost normal-case text-xl">Create Car</a>
+    <a routerLink="/user/create" class="btn btn-ghost normal-case text-xl">Create User</a>
   </div>
 
   <router-outlet></router-outlet>
