--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <a routerLink="/cars" class="btn btn-ghost normal-case text-xl">Cars</a>
     <a routerLink="/car/create" class="btn btn-ghost normal-case text-xl">Create Car</a>
     <a routerLink="/user/create" class="btn btn-ghost normal-case text-xl">Create User</a>
+    <a routerLink="/bid/create" class="btn btn-ghost normal-case text-xl">Create Bid</a>
   </div>
 
   <router-outlet></router-outlet>
