bids list page added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="container mx-auto">
   <div class="navbar mb-10 bg-base-100">
     <a routerLink="/cars" class="btn btn-ghost normal-case text-xl">Cars</a>
+    <a routerLink="/bids" class="btn btn-ghost normal-case text-xl">Bids</a>
     <a routerLink="/car/create" class="btn btn-ghost normal-case text-xl">Create Car</a>
     <a routerLink="/user/create" class="btn btn-ghost normal-case text-xl">Create User</a>
     <a routerLink="/bid/create" class="btn btn-ghost normal-case text-xl">Create Bid</a>
