--- a/src/app/components/bids/bids.component.html
+++ b/src/app/components/bids/bids.component.html
@@ -6,6 +6,7 @@
           <th>Begin Price</th>
           <th>Final Price</th>
           <th>Date</th>
+          <th></th>
         </tr>
       </thead>
       <tbody>
@@ -14,6 +15,7 @@
           <td>{{ bid.beginPrice }}</td>
           <td>{{ bid.finalPrice }}</td>
           <td>{{ bid.date }}</td>
+          <td><button *appShowIfToday="bid.date" class="btn btn-accent">Bid</button></td>
         </tr>
       </tbody>
     </table>
