--- a/src/app/components/create-car/create-car.component.html
+++ b/src/app/components/create-car/create-car.component.html
@@ -29,6 +29,9 @@
       placeholder="Type here"
       class="input input-bordered w-full max-w-xs"
       formControlName="modelYear"
+      [min]="minModelYear"
+      [max]="currentYear"
+      [ngClass]="{'input-error': modelYear!.touched && modelYear!.errors}"
     />
   </div>
   <div class="form-control w-full max-w-xs">
